--- a/assets/pug/layout/chat-layout/chat-right-sidebar.pug
+++ b/assets/pug/layout/chat-layout/chat-right-sidebar.pug
@@ -24,11 +24,11 @@ div.border-l.border-gray-light.tabs.flex-col.gap-0.right-sidebar-aside(class="rt
           span(class="text-[13px] leading-[18px] text-content") 562k 
     div.p-4.pb-0.tab-links.flex.justify-between
       button.tab.tab-lifted.w-full.pb-3.border-b.border-dashed.border-gray-light.tab-active.font-semibold.text-sm(data-tabFilter="1" class="tab-link leading-[22px] dark:border-b dark:border-border-dark") 
-        p Image
+        p.text-sm.font-bold Image
       button.tab.tab-lifted.w-full.pb-3.border-b.border-dashed.border-gray-light.font-semibold.text-sm(data-tabFilter="2" class="tab-link leading-[22px] dark:border-b dark:border-border-dark") 
-        p Document
+        p.text-sm.font-bold Document
       button.tab.tab-lifted.w-full.pb-3.border-b.border-dashed.border-gray-light.font-semibold.text-sm(data-tabFilter="3" class="tab-link leading-[22px] dark:border-b dark:border-border-dark")
-        p Link  
+        p.text-sm.font-bold Link  
     div.tabs-content 
       div(data-tabContent="1" class="tab-pan !p-0 !border-0 active show first:rounded-tl-none rounded-5")                                     
         div.px-4.pb-4.mt-4.overflow-auto(class="max-h-[268px] md:max-h-screen custom-scroll")
