--- a/assets/pug/pages/starter-kit/dark.pug
+++ b/assets/pug/pages/starter-kit/dark.pug
@@ -29,12 +29,12 @@ html(lang='en' class="dark")
     body(dir="ltr" class="unique-skin") 
         main.page-wrapper
             div.page-body-wrapper(class="xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300")
-                include ../../layout/starter-kit-header/header 
+                include ../../layout/header/header 
                 // Sidebar Start 
                 div.page-sidebar.sidebar-dark.unique-sidebar
                     include ../../layout/starter-kit-sidebar
                 // Sidebar End  
-  
+
                 // Page Body Start 
                 div.page-body 
                     div.grid.grid-cols-12.gap-card-gap
