--- a/assets/pug/pages/starter-kit/rtl.pug
+++ b/assets/pug/pages/starter-kit/rtl.pug
@@ -26,7 +26,7 @@ html(lang='en')
     body(dir="rtl" class="unique-skin")
         main.page-wrapper
             div.page-body-wrapper(class="xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300")
-                include ../../layout/starter-kit-header/header 
+                include ../../layout/header/header 
                 // Sidebar Start 
                 div.page-sidebar.sidebar-dark.unique-sidebar
                     include ../../layout/starter-kit-sidebar
