--- a/assets/pug/pages/template/email.pug
+++ b/assets/pug/pages/template/email.pug
@@ -117,7 +117,7 @@ html(lang='en')
                           li.left-sidebar-hide-logo-show(class="hidden sm:block") 
                             i(data-feather="filter" class="hidden w-5 h-5 cursor-pointer stroke-title left-sidebar-toggle-btn lg:block")
 
-                div.overflow-auto.custom-scroll(class="max-h-639px]")
+                div.overflow-auto.custom-scroll(class="max-h-[639px]")
                   div.flex.flex-col.gap-4.py-4.border-b.border-border-light.border-dashed(class="dark:border-b dark:border-border-dark")
                     h4.text-content3.font-semibold.leading-7 Hello Malikan! 
                     p.text-title.font-bold(class="text-[26px] leading-9") Minimalists Photos for Ui/Ux Designers
