--- a/assets/pug/pages/template/video-app.pug
+++ b/assets/pug/pages/template/video-app.pug
@@ -76,7 +76,7 @@ html(lang='en')
                 li.cursor-pointer.call-start-show
                   label(for='accept-call-modal')
                     +SVG_ICON("Calling","w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-success rounded-full relative cursor-pointer")
-                li.cursor-pointer  
+                li.cursor-pointer.call-start-end  
                   label(for="voice-call-modal")
                     +SVG_ICON("Call","w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-danger rounded-full rotate-[132deg] cursor-pointer")
     //- Accept call modal
