--- a/html/template/chat-app.html
+++ b/html/template/chat-app.html
@@ -412,23 +412,23 @@
                       <div class="dropdown-menu !min-w-[170px]"> 
                         <ul class="flex flex-col gap-3"> 
                           <li><a class="flex items-center gap-2 text-title" href="user-profile.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#2-User"> </use>
                               </svg>Profile Setting</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="chat-app.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#More-Square"> </use>
                               </svg>Message</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="todo.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                               </svg>Taskboard</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="knowledgebase.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Shield-Done"> </use>
                               </svg>Help</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="javascript:void(0)">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Login"> </use>
                               </svg>Logout</a></li>
                         </ul>
@@ -1693,13 +1693,13 @@
                   </div>
                   <div class="p-4 pb-0 tab-links flex justify-between">
                     <button class="tab tab-lifted w-full pb-3 border-b border-dashed border-gray-light tab-active font-semibold text-sm tab-link leading-[22px] dark:border-b dark:border-border-dark" data-tabFilter="1"> 
-                      <p>Image</p>
+                      <p class="text-sm font-bold">Image</p>
                     </button>
                     <button class="tab tab-lifted w-full pb-3 border-b border-dashed border-gray-light font-semibold text-sm tab-link leading-[22px] dark:border-b dark:border-border-dark" data-tabFilter="2"> 
-                      <p>Document</p>
+                      <p class="text-sm font-bold">Document</p>
                     </button>
                     <button class="tab tab-lifted w-full pb-3 border-b border-dashed border-gray-light font-semibold text-sm tab-link leading-[22px] dark:border-b dark:border-border-dark" data-tabFilter="3">
-                      <p>Link  </p>
+                      <p class="text-sm font-bold">Link  </p>
                     </button>
                   </div>
                   <div class="tabs-content"> 
@@ -1960,7 +1960,7 @@
                     </svg>
                   </label>
                 </li>
-                <li class="cursor-pointer"> 
+                <li class="cursor-pointer call-start-end"> 
                   <label for="voice-call-modal">
                     <svg class="w-[4rem] h-[4rem] 2lg:w-[3.5rem] 2lg:h-[3.5rem] sm:w-[3rem] sm:h-[3rem] p-[12px] stroke-white bg-danger rounded-full rotate-[132deg] cursor-pointer"> 
                       <use href="../../assets/svg/sprite.svg#Call"> </use>
