--- a/html/template/email.html
+++ b/html/template/email.html
@@ -409,23 +409,23 @@
                       <div class="dropdown-menu !min-w-[170px]"> 
                         <ul class="flex flex-col gap-3"> 
                           <li><a class="flex items-center gap-2 text-title" href="user-profile.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#2-User"> </use>
                               </svg>Profile Setting</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="chat-app.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#More-Square"> </use>
                               </svg>Message</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="todo.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                               </svg>Taskboard</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="knowledgebase.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Shield-Done"> </use>
                               </svg>Help</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="javascript:void(0)">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Login"> </use>
                               </svg>Logout</a></li>
                         </ul>
@@ -1411,7 +1411,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="overflow-auto custom-scroll max-h-639px]">
+                <div class="overflow-auto custom-scroll max-h-[639px]">
                   <div class="flex flex-col gap-4 py-4 border-b border-border-light border-dashed dark:border-b dark:border-border-dark">
                     <h4 class="text-content3 font-semibold leading-7">Hello Malikan! </h4>
                     <p class="text-title font-bold text-[26px] leading-9">Minimalists Photos for Ui/Ux Designers</p>
