--- a/html/template/index.html
+++ b/html/template/index.html
@@ -406,23 +406,23 @@
                       <div class="dropdown-menu !min-w-[170px]"> 
                         <ul class="flex flex-col gap-3"> 
                           <li><a class="flex items-center gap-2 text-title" href="user-profile.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#2-User"> </use>
                               </svg>Profile Setting</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="chat-app.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#More-Square"> </use>
                               </svg>Message</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="todo.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Edit-Square"> </use>
                               </svg>Taskboard</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="knowledgebase.html">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Shield-Done"> </use>
                               </svg>Help</a></li>
                           <li><a class="flex items-center gap-2 text-title" href="javascript:void(0)">
-                              <svg class="w-[22px] h-[22px] stroke-title dark:stroke-white"> 
+                              <svg class="w-[18px] h-[18px] stroke-title dark:stroke-white"> 
                                 <use href="../../assets/svg/sprite.svg#Login"> </use>
                               </svg>Logout</a></li>
                         </ul>
@@ -1182,7 +1182,7 @@
             <div class="col-span-3 4xl:col-span-4 lg:col-span-12">
               <div class="grid grid-cols-2 gap-card-gap"> 
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-body"> 
                       <div> 
                         <div class="flex items-center justify-between">
@@ -1211,7 +1211,7 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Earnings</h3>
@@ -1459,7 +1459,7 @@
             <div class="col-span-3 4xl:col-span-4 lg:col-span-12"> 
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Inventory Cost</h3>
@@ -1500,7 +1500,7 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Advertising</h3>
