--- a/assets/pug/pages/starter-kit/light.pug
+++ b/assets/pug/pages/starter-kit/light.pug
@@ -26,12 +26,12 @@ html(lang='en')
     body(dir="ltr" class="unique-skin")
         main.page-wrapper
             div.page-body-wrapper(class="xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300")
-                include ../../layout/starter-kit-header/header   
+                include ../../layout/header/header   
                 // Sidebar Start 
                 div.page-sidebar.sidebar-dark.unique-sidebar
                     include ../../layout/starter-kit-sidebar     
                 // Sidebar End  
- 
+
                 // Page Body Start
                 div.page-body
                     div.grid.grid-cols-12.gap-card-gap 
@@ -44,7 +44,7 @@ html(lang='en')
                                     li Govo Admin provides you getting start pages with different layouts, use the layout as per your custom requirements and just change the branding, menu & content.
                                     li Every components in Govo Admin are decoupled, it means use only components you actually need! Remove unnecessary and extra code easily just by excluding the path to specific SCSS, JS file.
                                     li It use PUG as template engine to generate pages and whole template quickly using node js. Save your time for doing the common changes for each page (i.e menu, branding and footer) by generating template with pug.
- 
+
                         div.card.col-span-12           
                             div.card-header.pb-2.header-bottom-border
                                 h3(class="font-bold text-title") What Is Starter Kit ?
