--- a/assets/postcss/utils/_variables.css
+++ b/assets/postcss/utils/_variables.css
@@ -8,6 +8,7 @@
   --success-light: #e9faf3;
   --info: #b52af6;
   --info-light: #b52af64d;
+  --info-extralight: #b52af61a;
   --warning: #feb858;
   --warning-light: #feb8584d;
   --warning-extralight: #F8AA4B1A;
