--- a/assets/pug/data/list-type.pug
+++ b/assets/pug/data/list-type.pug
@@ -48,8 +48,8 @@
 - 
     var NEWS_UPDATE = [
         {
-            image:"news/1.jpg",
-            title:"Google project apply reviwe",
+            image:"news/1.jpg", 
+            title:"Google project apply review",
             subTitle:"Today’s news headlines..",
             badge:"2hr ago",
             url:"blog-grid.html", 
