--- a/assets/pug/mixin/element-eco-product-box.pug
+++ b/assets/pug/mixin/element-eco-product-box.pug
@@ -53,7 +53,7 @@ mixin product2(data)
                 div(class="absolute cursor-pointer post-media top-3 right-3")
                     i(data-feather="heart" class="h-5 stroke-border-light fill-border-light wish-like")
                 a(href="product.html" class="block py-5 bg-white")
-                    img(src=`../../assets/images/${data.image}` class="rounded-[4px] w-auto h-[130px] mx-auto" alt="product image")
+                    img(src=`../../assets/images/${data.image}` class="rounded-[4px] w-auto h-[130px] 4xl:h-[110px] mx-auto" alt="product image")
             div.pt-2 
                 a(href="product.html" class="flex flex-col gap-[0.3rem]")     
                     h4(class="dark:text-white").font-bold.text-sm.text-title.line-clamp-1= data.productName
@@ -67,7 +67,7 @@ mixin product2(data)
                                 input.rating-star-2.bg-warning(type='radio' name='rating-1' class="w-4 h-4")
                                 input.rating-star-2.bg-warning(type='radio' name='rating-1' class="w-4 h-4")
                                 input.rating-star-2.bg-warning(type='radio' name='rating-1' class="w-4 h-4" checked='')
-                                input.rating-star-2.bg-border-light(type='radio' name='rating-1' class="w-4 h-4  ")                  
+                                input.rating-star-2.bg-border-light(type='radio' name='rating-1' class="w-4 h-4 ")                  
                         ul.flex.color-variant(class="gap-[3px]")
                             li(class="leading-[normal]")
                                 button.w-3.h-3.bg-primary.rounded-full(type="button")
