--- a/assets/pug/pages/template/calendar.pug
+++ b/assets/pug/pages/template/calendar.pug
@@ -59,8 +59,8 @@ html(lang='en')
                         .fc-event-main(class="!text-secondary") Event
                       .fc-event.fc-h-event.fc-daygrid-event.fc-daygrid-block-event.bg-success-light.p-3.text-sm.mb-3.border-0(class="dark:bg-sidebar-dark2")
                         .fc-event-main(class="!text-success") Birthday Party
-                      .fc-event.fc-h-event.fc-daygrid-event.fc-daygrid-block-event.bg-warning-light.p-3.text-sm.mb-3.border-0
-                        .fc-event-main(class="!text-warning") Holiday
+                      .fc-event.fc-h-event.fc-daygrid-event.fc-daygrid-block-event.p-3.text-sm.mb-3.border-0(class="!bg-info-extralight")
+                        .fc-event-main(class="!text-info") Holiday
                     div.flex.items-center.gap-2 
                       label.checkbox.checkbox-sm.cursor-pointer  
                         input#drop-remove(type='checkbox' class="peer") 
