--- a/html/template/calendar.html
+++ b/html/template/calendar.html
@@ -1036,8 +1036,8 @@
                       <div class="fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event bg-success-light p-3 text-sm mb-3 border-0 dark:bg-sidebar-dark2">
                         <div class="fc-event-main !text-success">Birthday Party</div>
                       </div>
-                      <div class="fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event bg-warning-light p-3 text-sm mb-3 border-0">
-                        <div class="fc-event-main !text-warning">Holiday</div>
+                      <div class="fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event p-3 text-sm mb-3 border-0 !bg-info-extralight">
+                        <div class="fc-event-main !text-info">Holiday</div>
                       </div>
                     </div>
                     <div class="flex items-center gap-2"> 
