--- a/assets/postcss/utils/_ratio.css
+++ b/assets/postcss/utils/_ratio.css
@@ -47,29 +47,29 @@
   background-position: top !important;
 }
 .b-bottom {
-  background-position: bottom !important;
+  background-position: bottom !important; 
 }
 .b-center {
   background-position: center !important;
 }
 .b_size_content {
-  background-size: contain !important;
+  background-size: contain !important; 
   background-repeat: no-repeat;
 }
 
 .welcome-card-main{
   &.common-animate-main{
     .bg-img{
-      @apply !block;
+      @apply !block 2md:!hidden;
       .welcome-img{
-        @apply mt-[calc(-16px_+_(-81_-_-16)_*_((100vw_-_1600px)_/_(1920_-_1600)))] w-full 4xl:mt-[calc(-50px+_(-110_-_-50)_*_((100vw_-_1200px)_/_(1920_-_1200)))] 4xl:max-h-[300px] xl:mt-[calc(-36px_+__(-300_-_-36)_*_((100vw_-_991px)_/_(1920_-_991)))] lg:mt-[calc(-90px_+__(-150_-_-90)_*_((100vw_-_768px)_/_(1920_-_768)))] lg:h-[300px] 2md:max-h-[300px] 2md:h-unset;
+        @apply mt-[calc(-16px_+_(-91_-_-16)_*_((100vw_-_1600px)_/_(1920_-_1600)))] w-full 4xl:mt-[calc(-50px+_(-110_-_-50)_*_((100vw_-_1200px)_/_(1920_-_1200)))] 4xl:max-h-[300px] xl:mt-[calc(-36px_+__(-300_-_-36)_*_((100vw_-_991px)_/_(1920_-_991)))] lg:mt-[calc(-90px_+__(-150_-_-90)_*_((100vw_-_768px)_/_(1920_-_768)))] lg:h-[300px] 2md:max-h-[300px] 2md:h-unset 2md:mt-[calc(-57px_+__(-80_-_-57)_*_((100vw_-_675px)_/_(675_-_575)))];
       }
       .common-animate{
         animation-duration: 40000ms;
       }
       [dir="rtl"] & {
         transform: rotateY(180deg);
-      }
+      } 
     }
   }
 }
