--- a/assets/pug/pages/template/ecommerce.pug
+++ b/assets/pug/pages/template/ecommerce.pug
@@ -15,10 +15,10 @@
 -var ecommerceApex=true;  
 
 //- swiper-slider
--var swiper=true;
+-var swiper=true; 
 
 //- Breadcrumbs 
--var pageTitle="Ecommerce Dashboard";
+-var pageTitle="Ecommerce"; 
 -var breadcrumb=['dashboard','Ecommerce']; 
 
 //- all JSON  
@@ -46,12 +46,12 @@ html(lang='en')
                             div(class="grid grid-cols-2 gap-card-gap")
                                 each data in WIDGET4_DATA
                                     div.col-span-1(class="md:col-span-2")
-                                        div.card.svg-shake(class="gap-0 p-0 transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45")
+                                        div.card.svg-shake(class="gap-0 p-0 transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45")
                                             +widget4(data) 
                         div.col-span-6(class="xl:col-span-6 xl:order-2 lg:col-span-12")
                             div.card.gap-0 
                                 div.card-header
-                                    div.flex.justify-between.w-full(class="flex-wrap gap-2 items-center 2xl:flex-nowrap 2xl:gap-1 2sm:flex-wrap 2sm:gap-2")
+                                    div.flex.justify-between.w-full(class="flex-wrap items-center gap-2 2xl:flex-nowrap 2xl:gap-1 2sm:flex-wrap 2sm:gap-2")
                                         h3(class="text-lg font-bold leading-none text-title") Sales Summary (Jun 2023)
                                         div.flex.items-center.gap-4
                                             div(class="2sm:hidden").radialBar-legend 
@@ -116,7 +116,7 @@ html(lang='en')
                                                         button.flex.items-center.gap-2(class="justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2")
                                                             span(class=`w-[10px] bg-${item.status} h-[10px] rounded-[2px]`)
                                                             span(class="text-xs font-semibold text-left line-clamp-1 ")= item.title
-                        div.col-span-4(class="lg:col-span-12  xl:order-4")
+                        div.col-span-4(class="lg:col-span-6 2md:col-span-12 xl:order-4")
                             div.card 
                                 div.card-header 
                                     +card-header("Customers","setting", HISTORY_DROPDOWN)
@@ -128,33 +128,33 @@ html(lang='en')
                                         div(class="w-full px-3 border-r border-border-light dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l") 
                                             div.radialBar-legend-series 
                                                 span.radialBar-legend-marker.primary
-                                                p(class="2xl:line-clamp-1 2xl:hidden lg:block 2sm:hidden").radialBar-legend-text.text-3xs.text-title Current Customers
-                                                p(class="2xl:line-clamp-1 hidden lg:hidden  2sm:block").radialBar-legend-text.text-3xs.text-title Current 
+                                                p(class="line-clamp-1 2xl:hidden").radialBar-legend-text.text-3xs.text-title Current Customers
+                                                p(class="hidden 2xl:block line-clamp-1").radialBar-legend-text.text-3xs.text-title Current 
                                             small.text-xs.text-content3(class="pl-3 rtl:pl-0 rtl:pr-3") 45%
                                         div(class="w-full px-3 border-r border-border-light dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l")
                                             div.radialBar-legend-series 
                                                 span.radialBar-legend-marker.secondary
-                                                p(class="2xl:line-clamp-1 2xl:hidden lg:block 2sm:hidden").radialBar-legend-text.text-3xs.text-title New Customers
-                                                p(class="2xl:line-clamp-1 hidden lg:hidden  2sm:block").radialBar-legend-text.text-3xs.text-title New 
+                                                p(class="line-clamp-1 2xl:hidden").radialBar-legend-text.text-3xs.text-title New Customers
+                                                p(class="hidden 2xl:block line-clamp-1").radialBar-legend-text.text-3xs.text-title New 
                                             small.text-xs.text-content3(class="pl-3 rtl:pl-0 rtl:pr-3") 62% 
                                         div(class="w-full px-3 border-r border-border-light dark:border-border-dark last:border-none rtl:border-r-0 rtl:border-l")
                                             div.radialBar-legend-series
                                                 span.radialBar-legend-marker.title 
-                                                p(class="2xl:line-clamp-1 2xl:hidden lg:block 2sm:hidden").radialBar-legend-text.text-3xs.text-title Retarget Customers
-                                                p(class="2xl:line-clamp-1 hidden lg:hidden  2sm:block").radialBar-legend-text.text-3xs.text-title Retarget
+                                                p(class="line-clamp-1 2xl:hidden").radialBar-legend-text.text-3xs.text-title Retarget Customers
+                                                p(class="hidden 2xl:block line-clamp-1").radialBar-legend-text.text-3xs.text-title Retarget
                                             small.text-xs.text-content3(class="pl-3 rtl:pl-0 rtl:pr-3") 34% 
-                        div.col-span-4(class="lg:col-span-12  recent-activity xl:order-5") 
+                        div.col-span-4(class="lg:col-span-6 2md:col-span-12 recent-activity xl:order-5") 
                             div.card
                                 div.card-header    
                                     +card-header("Recent Activity","setting", HISTORY_DROPDOWN)
                                 div.card-body  
                                     ul(class="relative before:content-[''] before:absolute before:border before:border-border-light before:w-[1px] before:h-full  before:top-0 rtl:before:bottom-0   rtl:before:right-[1.188rem] before:left-[1.188rem] 2xl:before:left-[1.125rem] rtl:lg:before:right-[2%]  rtl:2xl:before:right-[1.125rem]  rtl:4xl:before:right-[1.188rem] 4xl:before:left-[1.188rem] 2lg:before:left-[1.188rem] rtl:2lg:before:right-[1.188rem] rtl:lg:before:right-[1.188rem] lg:before:left-[1.188rem] rtl:left-unset rtl:right-[4%] dark:border-border-dark") 
-                                        li.flex.gap-4(class="pb-6 last:pb-0")
+                                        li.flex.gap-4(class="pb-6 last:pb-0 4xl:pb-4")
                                             div.relative 
                                                 img(class="min-w-[40px] h-[40px] rounded-full" src=`../../assets/images/avatar/39.jpg`, alt=`avatar`) 
                                             div.flex.flex-col.gap-1 
                                                 span.text-content3.text-2xs.font-bold 2hrs Ago
-                                                p(class="2xl:line-clamp-2").text-title.font-medium Today, I'm very happy about myself, because I realized my dreams.
+                                                p(class="line-clamp-2").text-title.font-medium Today, I'm very happy about myself, because I realized my dreams.
                                                 ul.flex.items-center.gap-2.flex-wrap 
                                                     li 
                                                         img(class="min-w-[40px] h-[40px] rounded-5 transition ease-in delay-400 duration-500 hover:shadow-lg hover:-translate-y-1 hover:scale-100" src=`../../assets/images/product/18.png`, alt=`t-shirt`) 
@@ -162,38 +162,38 @@ html(lang='en')
                                                         img(class="min-w-[40px] h-[40px] rounded-5 transition ease-in delay-400 duration-500 hover:shadow-lg hover:-translate-y-1 hover:scale-100" src=`../../assets/images/product/17.png`, alt=`shoes`) 
                                                     li 
                                                         img(class="min-w-[40px] h-[40px] rounded-5 transition ease-in delay-400 duration-500 hover:shadow-lg hover:-translate-y-1 hover:scale-100" src=`../../assets/images/product/16.png`, alt=`watch`) 
-                                        li.flex.gap-4(class="pb-6 last:pb-0") 
+                                        li.flex.gap-4(class="pb-6 last:pb-0 4xl:pb-4") 
                                             div.relative
                                                 img(class="min-w-[40px] h-[40px] rounded-full" src=`../../assets/images/avatar/40.png`, alt=`avatar`) 
                                             div.flex.flex-col.gap-1
                                                 span.text-content3.text-2xs.font-bold 5hrs Ago
-                                                p(class="2xl:line-clamp-2").text-title.font-medium That is the key of this collection, being yourself. Don't be into trends.
+                                                p(class="line-clamp-2").text-title.font-medium That is the key of this collection, being yourself. Don't be into trends.
 
-                                        li.flex.gap-4(class="items-center pb-6 last:pb-0") 
+                                        li.flex.gap-4(class="items-center pb-6 last:pb-0 4xl:pb-4") 
                                             div(class="min-w-[40px]")    
                                                 div.activity-dot-secondary
                                             div.flex.flex-col.gap-1
                                                 span.text-title.text-xs.relative(class="before:content-[''] recent-activity-date before:absolute before:h-[2px] before:left-[-40%] rtl:left-unset rtl:before:right-[-40%] before:bg-border-light before:top-[45%] before:w-[calc(100%_-_55px)]") 25 Oct,2022
 
-                                        li.flex.gap-4(class="pb-6 last:pb-0") 
+                                        li.flex.gap-4(class="pb-6 last:pb-0 4xl:pb-4") 
                                             div.relative
                                                 img(class="min-w-[40px] h-[40px] rounded-full" src=`../../assets/images/avatar/41.png`, alt=`avatar`) 
                                             div.flex.flex-col.gap-1
                                                 span.text-content3.text-2xs.font-bold 10:30 pm
-                                                p(class="2xl:line-clamp-2").text-title.font-medium I think it's an old fashioned notion that fashion needs to be exclusive to be fashionable.
+                                                p(class="line-clamp-2").text-title.font-medium I think it's an old fashioned notion that fashion needs to be exclusive to be fashionable.
 
-                                        li.flex.gap-4(class="pb-6 last:pb-0") 
+                                        li.flex.gap-4(class="pb-6 last:pb-0 4xl:pb-4") 
                                             div.relative
                                                 img(class="min-w-[40px] h-[40px] rounded-full" src=`../../assets/images/avatar/42.png`, alt=`avatar`) 
                                             div.flex.flex-col.gap-1
                                                 span.text-content3.text-2xs.font-bold 12:00 pm
-                                                p(class="2xl:line-clamp-1").text-title.font-medium If you wear clothes that don't suit you.
+                                                p(class="line-clamp-1").text-title.font-medium If you wear clothes that don't suit you.
 
                         div.col-span-4(class="lg:col-span-12 xl:order-6")
                             div.card
                                 div.card-header
                                     div.flex.justify-between.w-full(class=`flex-wrap gap-2 items-center`)
-                                        h3(class="text-lg font-bold leading-none text-title") Global Sales by top Locations
+                                        h3(class="text-lg font-bold leading-none text-title 2xl:line-clamp-1") Global Sales by top Locations
                                         div.flex.items-center.gap-4
                                             div(class="2xl:hidden").dropdown.on-hover-show
                                                 button(class="flex  rounded-full items-center justify-center p-[5px] bg-gray-light dark:bg-sidebar-dark2 ") 
@@ -209,14 +209,14 @@ html(lang='en')
                                 div.card-body 
                                     div.overflow-auto.custom-scroll  
                                         include ../../components/table/sale-detail 
-                        div.col-span-5(class="lg:col-span-12   xl:order-7")
+                        div.col-span-5(class="lg:col-span-12 xl:order-7")
                             div.card
                                 div.card-header
                                     +card-header("Best Product Seller","setting", HISTORY_DROPDOWN)
                                 div.card-body
                                     div.overflow-auto.custom-scroll  
                                         include ../../components/table/product-seller-detail
-                        div.col-span-7(class="lg:col-span-12  xl:order-8")
+                        div.col-span-7(class="lg:col-span-12 xl:order-8")
                             div.card
                                 div.card-header
                                     +card-header("Today’s Deals","setting", HISTORY_DROPDOWN)
