--- a/html/template/index.html
+++ b/html/template/index.html
@@ -36,7 +36,7 @@
                     <use href="../../assets/svg/sprite.svg#Category"> </use>
                   </svg>
                 </button>
-                <h1 class="flex items-center gap-1 text-xl font-extrabold leading-none sm:hidden dark:text-white 4xl:text-lg">Unique Dashboard</h1>
+                <h1 class="flex items-center gap-1 text-xl font-extrabold leading-none sm:hidden dark:text-white 4xl:text-lg">Unique</h1>
               </div>
               <div class="right-header flex items-center flex-1 sm:gap-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] gap-[calc(16px_+_(20_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))]  justify-end">
                 <div class="search-box-wrapper transition-all duration-300 max-w-[40%] 2xl:scale-0 2xl:opacity-0 2xl:invisible 2xl:px-body-space 2xl:max-w-full w-full 2xl:z-[5] flex-1 2xl:absolute 2xl:left-0">
@@ -1019,18 +1019,18 @@
         <!-- Page Body Start  -->
         <div class="page-body">
           <div class="grid grid-cols-12 gap-card-gap"> 
-            <div class="col-span-3 ratio_109 4xl:col-span-4 lg:col-span-6 lg:-order-2 2md:col-span-12">
+            <div class="col-span-3 ratio_109 4xl:col-span-4 lg:col-span-5 2lg:col-span-6 lg:-order-2 2md:col-span-12">
               <!-- Welcome Card -->
-              <div class="card p-card-space before:!pt-0 bg-primary relative common-animate-main h-full gap-0 common-animate-main welcome-card-main"> 
+              <div class="card p-card-space before:!pt-0 bg-primary relative common-animate-main 4xl:h-[390px] xl:h-full gap-0 common-animate-main welcome-card-main h-[410px] "> 
                 <div>
-                  <h4 class="flex items-center gap-2 justify-between"> <span class="flex items-center gap-2 text-3xl font-semibold text-white 3sm:text-lg 5xl:text-2xl ">Hello, Amirreza<img class="w-[22px] h-[22px]" src="../../assets/images/waving-hand.png" alt="waving-hand"></span>
+                  <h4 class="flex items-center gap-2 justify-between"> <span class="flex items-center gap-2 text-3xl font-semibold text-white 3sm:text-lg 5xl:text-2xl">Hello, Amirreza<img class="w-[22px] h-[22px]" src="../../assets/images/waving-hand.png" alt="waving-hand"></span>
                     <div class="dropdown">
                       <button class="before:absolute flex items-center justify-center cursor-pointer before:inset-0 before:bg-white before:opacity-[34%] before:rounded-full p-[5px]"> 
                         <svg class="w-[18px] h-[18px] stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Setting"> </use>
                         </svg>
                       </button>
-                      <div class="dropdown-menu !w-36 right-0 !top-11">
+                      <div class="dropdown-menu !w-36 right-0 !top-8">
                         <ul> 
                           <li><a href="profile.html">Profile Setting  </a></li>
                           <li><a href="email.html">Message</a></li>
@@ -1039,7 +1039,7 @@
                       </div>
                     </div>
                   </h4>
-                  <p class="text-xs font-semibold text-content-white leading-[22px] max-w-[285px] mt-1">Welcome to the Govo family! we are glad that you are visite this dashboard.</p>
+                  <p class="text-xs font-semibold text-content-white leading-[22px] max-w-[285px] mt-1 2md:line-clamp-2 sm:line-clamp-none">Welcome to the Govo family! we are glad that you are visite this dashboard.</p>
                   <button class="mt-6 sm:mt-4 rounded-5 py-[8px] px-4 bg-white text-xs font-bold text-title dark:bg-sidebar-dark2 hover:text-primary">What New!</button>
                 </div>
                 <div class="relative bg-img"> <img class="img-fluid welcome-img" src="../../assets/images/svg/1.svg" alt="welcome-image"><img class="w-[28px] h-[28px] common-animate animate-ping top-[14px] 6xl:top-[30px] 4xl:top-[14px] absolute left-[10%] 2md:left-[24%] sm:left-[10%] animate__animated animate__infinite animate__shakeY animate__slower" src="../../assets/images/svg/done.svg" alt="welcome-done-image"><img class="w-24 h-w-24 common-animate animate-ping top-[-10%] 6xl:top-[4%] 4xl:top-[-10%] absolute right-[2%] 2md:right-[17%] sm:right-[2%] left-unset  animate__animated animate__infinite animate__shakeY animate__slower" src="../../assets/images/svg/rocket.svg" alt="welcome-rocket-image"></div>
@@ -1086,7 +1086,7 @@
                           <td class="min-w-[6.25rem]"> 
                             <h4 class="text-xs font-semibold text-success">$251 USD</h4>
                           </td>
-                          <td class="min-w-[5.3125rem]"> 
+                          <td class="min-w-[6.5rem]"> 
                             <h4 class="text-xs font-semibold uppercase text-title">#px0101</h4>
                           </td>
                           <td class="min-w-[4.6875rem]"> 
@@ -1111,7 +1111,7 @@
                           <td class="min-w-[6.25rem]"> 
                             <h4 class="text-xs font-semibold text-danger">$350 USD</h4>
                           </td>
-                          <td class="min-w-[5.3125rem]"> 
+                          <td class="min-w-[6.5rem]"> 
                             <h4 class="text-xs font-semibold uppercase text-title">#rf304f</h4>
                           </td>
                           <td class="min-w-[4.6875rem]"> 
@@ -1136,7 +1136,7 @@
                           <td class="min-w-[6.25rem]"> 
                             <h4 class="text-xs font-semibold text-success">$240 USD</h4>
                           </td>
-                          <td class="min-w-[5.3125rem]"> 
+                          <td class="min-w-[6.5rem]"> 
                             <h4 class="text-xs font-semibold uppercase text-title">#dnj480</h4>
                           </td>
                           <td class="min-w-[4.6875rem]"> 
@@ -1161,7 +1161,7 @@
                           <td class="min-w-[6.25rem]"> 
                             <h4 class="text-xs font-semibold text-danger">$200 USD</h4>
                           </td>
-                          <td class="min-w-[5.3125rem]"> 
+                          <td class="min-w-[6.5rem]"> 
                             <h4 class="text-xs font-semibold uppercase text-title">#g189d0</h4>
                           </td>
                           <td class="min-w-[4.6875rem]"> 
@@ -1614,7 +1614,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-span-3 4xl:col-span-4 lg:-order-2 lg:col-span-6 2md:col-span-12">
+            <div class="col-span-3 4xl:col-span-4 lg:-order-2 lg:col-span-7 2lg:col-span-6 2md:col-span-12">
               <div class="card"> 
                 <div class="card-header">
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
@@ -1627,7 +1627,7 @@
                       <div class="flex items-center gap-[10px] flex-[1_1_0]">
                         <div class="rounded-5 overflow-hidden w-[60px] 5xl:w-[59px] lg:w-[51px] 2sm:w-[48px]"><img class="w-full h-auto object-cover" src="../../assets/images/news/1.jpg" alt="event"/></div>
                         <div class="flex-1"> <a href="blog-grid.html">
-                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Google project apply reviwe</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Today’s news headlines..</span>
+                            <h4 class="transition-all text-xs font-semibold text-title line-clamp-1 group-hover:text-primary">Google project apply review</h4></a><span class="text-2xs font-semibold text-content line-clamp-1 mt-[4px]">Today’s news headlines..</span>
                         </div>
                       </div><span class="min-w-fit badge bg-gray-light text-3xs text-title py-[7px] px-[13px] dark:bg-sidebar-dark2">2hr ago</span>
                     </li>
