--- a/html/template/widgets.html
+++ b/html/template/widgets.html
@@ -1022,7 +1022,7 @@
             <div class="col-span-8 xl:col-span-12"> 
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card svg-shake transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card svg-shake transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1052,7 +1052,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card svg-shake transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card svg-shake transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1082,7 +1082,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card svg-shake transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card svg-shake transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1112,7 +1112,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card svg-shake transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card svg-shake transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1168,7 +1168,7 @@
             <div class="col-span-4 xl:col-span-6 lg:col-span-12 xl3:order-5">
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header"> 
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Earnings</h3>
@@ -1204,7 +1204,7 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-body">
                       <div> 
                         <div class="flex items-center justify-between">
@@ -1237,7 +1237,7 @@
             <div class="col-span-4 xl:col-span-6 lg:col-span-12">
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2"> 
-                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Inventory Cost</h3>
@@ -1278,8 +1278,8 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card p-0 overflow-hidden transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45 ">
-                    <div class="relative"><img class="w-full h-[178px] 2xl:h-[170px] lg:h-[193px] 2md:h-[170px] dark:brightness-50" src="../../assets/images/banner/2.jpg" alt="banner">
+                  <div class="card p-0 overflow-hidden transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45 ">
+                    <div class="relative"><img class="w-full h-[185px] 4xl:h-[180px] 2xl:h-[170px] lg:h-[193px] 2md:h-[170px] dark:brightness-50" src="../../assets/images/banner/2.jpg" alt="banner">
                       <div class="absolute top-1/2 -translate-y-1/2 left-0 max-w-[70%] px-card-space"> 
                         <h5 class="text-lg font-extrabold text-title">$5,859 </h5>
                         <p class="text-lg font-normal 4xl:text-sm text-title ">Make an announcement to your coworkers</p>
@@ -1292,7 +1292,7 @@
             <div class="col-span-4 xl:col-span-6 lg:col-span-12">
               <div class="grid grid-cols-2 gap-card-gap"> 
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                  <div class="card transition duration-500 ease-in delay-400 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Advertising</h3>
